# UnfortuneMesh

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: circle.xy  regular.xy  strips.xy
src/: BndBox.h  Circle.h  Context.h  Frame.h  HalfEdge.h  HalfEdgesIterator.h  Launcher.h  LocalContext.h  Mesh.h  MeshTool.h  Node.h  Point.h  PointSetTool.h  Polygon.h  TrianglesIterator.h  Triangulator.h  Utils.h
